--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,10 @@
 <!doctype html>
 <html lang="en">
+  <style>
+    html, body, #root {
+      height: 100%;
+    }
+  </style>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
